# PancakeFramework

./: CLAUDE.md  README.md  README_CN.md  pyproject.toml  test_publish.sh
.github/workflows/: ci.yml  pr-check.yml  publish.yml
docs/tutorial/en/: 02-core-concepts.md
docs/tutorial/zh/: 02-core-concepts.md
pancake/: cli.py  cover  crash.py  decorators.py  dough.py  exceptions.py  registry.py  run.py  settings.py
pancake/base/: __init__.py  configuration.py  function.py  service.py  struct.py
pancake/builder/: build.py  load_dlc.py  load_src.py
pancake/cli/: __init__.py  audit.py  config.py  misc.py  plugin.py  project.py
pancake/decorators/: __init__.py  config.py  convert.py  inject.py  log.py  scope.py
pancake/factory/: dough_factory.py
pancake/initialize/: check_env.py  check_struct.py  print_ico.py
pancake/oven/: default.py  muffin.py  pancake.py
pancake/ovenware/: __init__.py  ai_memory.py  ai_model.py  base.py  broker.py  embed.py  external_plugin.py  inject.py  lifecycle.py  redis_cache.py  remote.py  web.py
pancake/ovenware/langgraph/: core.py
pancake/ovenware/mybatis/: __init__.py  connection.py  mapper.py  wrapper.py
pancake/ovenware/web/: __init__.py  auth.py  controller.py  filter.py  main.py  metrics.py  middleware.py  websocket.py
pancake/resource/: json.py  xml_config.py  yml.py
src/resource/yaml/: ai.yaml
tests/: conftest.py  test_asyncio_run.py  test_base_classes.py  test_broker.py  test_cli_typo.py  test_config_replace.py  test_connection.py  test_cui.py  test_decorators.py  test_dough.py  test_dough_factory.py  test_gui.py  test_ioc.py  test_mapper.py  test_muffin_sugar.py  test_registry.py  test_sql_parser.py  test_wrapper.py
