[tool.poetry]
name = "pancake_framework"
version = "0.1.3"
description = "Pancake - Decorator-driven Python web framework with IoC, MyBatis ORM, and AI workflow"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.33.1"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
python-dotenv = "^1.2.2"
pyyaml = "^6.0.3"
peewee = "^4.0.5"
databases = "^0.9.0"
aiosqlite = "^0.22.1"

# Optional dependencies
langgraph = {version = "^1.1.10", optional = true}
websocket-client = {version = "^1.9.0", optional = true}
aiohttp = {version = "^3.9.0", optional = true}
grpcio = {version = "^1.60.0", optional = true}
redis = {version = "^5.0.0", optional = true}
openai = {version = "^1.0.0", optional = true}
google-genai = {version = "^1.0.0", optional = true}
tiktoken = {version = "^0.7.0", optional = true}
psycopg2-binary = {version = "^2.9.0", optional = true}
pymongo = {version = "^4.0.0", optional = true}
click = {version = "^8.0.0", optional = true}
flet = {version = "^0.85.0", optional = true}
jinja2 = {version = "^3.1.0", optional = true}
python-multipart = {version = "^0.0.18", optional = true}

[tool.poetry.extras]
langgraph = ["langgraph"]
websocket = ["websocket-client"]
http = ["aiohttp"]
grpc = ["grpcio"]
redis = ["redis"]
ai = ["openai", "google-genai", "tiktoken", "psycopg2-binary", "pymongo"]
cui = ["click"]
gui = ["flet"]
web = ["jinja2", "python-multipart"]
all = ["langgraph", "websocket-client", "aiohttp", "grpcio", "redis", "openai", "google-genai", "tiktoken", "psycopg2-binary", "pymongo", "click", "flet", "jinja2", "python-multipart"]

[tool.poetry.scripts]
pancake = "pancake.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
