[tool.poetry]
name = "pancake_framework"
version = "0.2.0"
description = "Pancake - Decorator-driven Python web framework with IoC, MyBatis ORM, and AI workflow"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.33.1"
python-dotenv = "^1.2.2"
pyyaml = "^6.0.3"

# 可选插件包 — 通过 extras 安装
pancake-embed = {version = "^0.1.0", optional = true}
pancake-web = {version = "^0.1.0", optional = true}
pancake-mybatis = {version = "^0.1.0", optional = true}
pancake-redis = {version = "^0.1.0", optional = true}
pancake-ai = {version = "^0.1.0", optional = true}
pancake-cui = {version = "^0.1.0", optional = true}
pancake-gui = {version = "^0.1.0", optional = true}
pancake-remote = {version = "^0.1.0", optional = true}
pancake-langgraph = {version = "^0.1.0", optional = true}

[tool.poetry.extras]
embed = ["pancake-embed"]
web = ["pancake-web"]
mybatis = ["pancake-mybatis"]
redis = ["pancake-redis"]
ai = ["pancake-ai"]
cui = ["pancake-cui"]
gui = ["pancake-gui"]
remote = ["pancake-remote"]
langgraph = ["pancake-langgraph"]
all = ["pancake-embed", "pancake-web", "pancake-mybatis", "pancake-redis", "pancake-ai", "pancake-cui", "pancake-gui", "pancake-remote", "pancake-langgraph"]

[tool.poetry.scripts]
pancake = "pancake.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
